functional calculator in JS

--- a/index.html
+++ b/index.html
@@ -28,75 +28,75 @@
 <div class="container">
     <div class="row">
             <div class="col-lg-3 total">
-                <div class="well" id="total"></div>
+                <div id="total"></div>
             </div>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="allClear">AC</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="clearLast">CE</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="percent">%</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="divide">/</div>
-        </div>
+        <button class="col-sm-3 col-lg-3 point" id='allClear' value="AC">
+           AC
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id="clearLast" value="CE">
+           CE
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id="pecent" value="%">
+            %
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id="divide" value='/'>
+            /
+        </button>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="seven">7</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="eight">8</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="nine">9</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="multiply">x</div>
-        </div>
+        <button class="col-sm-3 col-lg-3 point num" id="seven" value="7">
+            7
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="eight" value="8">
+            8
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="nine" value="9">
+           9
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id="multiply" value='*'>
+            x
+        </button>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="four">4</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="five">5</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="six">6</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="minus">-</div>
-        </div>
+        <button class="col-sm-3 col-lg-3 point num" id="four" value="4">
+           4
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="five" value="5">
+            5
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="six" value="6">
+           6
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id='minus' value="-">
+            -
+        </button>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="one">1</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="two">2</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="three">3</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="plus">+</div>
-        </div>
+        <button class="col-sm-3 col-lg-3 point num" id="one" value="1">
+            1
+        </button>
+        <button class="col-sm-3 col-lg-3 point num"  id='two' value="2">
+            2
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="three" value="3">
+            3
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id='plus' value="+">
+            +
+        </button>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="zero">0</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="decimal">.</div>
-        </div>
-        <div class="col-sm-3 col-lg-3 point">
-            <div class="button" id="equals">=</div>
-        </div>
+        <button class="col-sm-3 col-lg-3 point num" id="zero" value="0">
+            0
+        </button>
+        <button class="col-sm-3 col-lg-3 point num" id="decimal" value=".">
+            .
+        </button>
+        <button class="col-sm-3 col-lg-3 point" id='equal' value="=">
+            =
+        </button>
         <div class="col-sm-3 col-lg-3"></div>
     </div>
 </div>
