--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <button class="col-sm-3 col-lg-3 point num" id="three" value="3">
             3
         </button>
-        <button class="col-sm-3 col-lg-3 point" id='plus' value="+">
+        <button class="col-sm-3 col-lg-3 point plus" id='plus' value="+">
             +
         </button>
     </div>
@@ -97,7 +97,7 @@
         <button class="col-sm-3 col-lg-3 point" id='equal' value="=">
             =
         </button>
-        <div class="col-sm-3 col-lg-3"></div>
+        
     </div>
 </div>
 </body>
