updated colors, division symbol

--- a/index.html
+++ b/index.html
@@ -32,72 +32,72 @@
             </div>
     </div>
     <div class="row">
-        <button class="col-sm-3 col-lg-3 point" id='allClear' value="AC">
+        <button class="col-xs-3 col-lg-3 point clear" id='allClear' value="AC">
            AC
         </button>
-        <button class="col-sm-3 col-lg-3 point" id="clearLast" value="CE">
+        <button class="col-xs-3 col-lg-3 point clear" id="clearLast" value="CE">
            CE
         </button>
-        <button class="col-sm-3 col-lg-3 point" id="pecent" value="%">
-            %
+        <button class="col-xs-3 col-lg-3 point" id="pecent" value="%">
+            &#37
         </button>
-        <button class="col-sm-3 col-lg-3 point" id="divide" value='/'>
-            /
+        <button class="col-xs-3 col-lg-3 point" id="divide" value='/'>
+           &#247;
         </button>
     </div>
     <div class="row">
-        <button class="col-sm-3 col-lg-3 point num" id="seven" value="7">
+        <button class="col-xs-3 col-lg-3 point num" id="seven" value="7">
             7
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="eight" value="8">
+        <button class="col-xs-3 col-lg-3 point num" id="eight" value="8">
             8
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="nine" value="9">
+        <button class="col-xs-3 col-lg-3 point num" id="nine" value="9">
            9
         </button>
-        <button class="col-sm-3 col-lg-3 point" id="multiply" value='*'>
-            x
+        <button class="col-xs-3 col-lg-3 point" id="multiply" value='*'>
+            &times;
         </button>
     </div>
     <div class="row">
-        <button class="col-sm-3 col-lg-3 point num" id="four" value="4">
+        <button class="col-xs-3 col-lg-3 point num" id="four" value="4">
            4
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="five" value="5">
+        <button class="col-xs-3 col-lg-3 point num" id="five" value="5">
             5
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="six" value="6">
+        <button class="col-xs-3 col-lg-3 point num" id="six" value="6">
            6
         </button>
-        <button class="col-sm-3 col-lg-3 point" id='minus' value="-">
-            -
+        <button class="col-xs-3 col-lg-3 point" id='minus' value="-">
+           &minus;
         </button>
     </div>
     <div class="row">
-        <button class="col-sm-3 col-lg-3 point num" id="one" value="1">
+        <button class="col-xs-3 col-lg-3 point num" id="one" value="1">
             1
         </button>
-        <button class="col-sm-3 col-lg-3 point num"  id='two' value="2">
+        <button class="col-xs-3 col-lg-3 point num"  id='two' value="2">
             2
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="three" value="3">
+        <button class="col-xs-3 col-lg-3 point num" id="three" value="3">
             3
         </button>
-        <button class="col-sm-3 col-lg-3 point plus" id='plus' value="+">
-            +
+        <button class="col-xs-3 col-lg-3 point plus" id='plus' value="+">
+            &plus;
         </button>
     </div>
     <div class="row">
-        <button class="col-sm-3 col-lg-3 point num" id="zero" value="0">
+        <button class="col-xs-3 col-lg-3 point num" id="zero" value="0">
             0
         </button>
-        <button class="col-sm-3 col-lg-3 point num" id="decimal" value=".">
+        <button class="col-xs-3 col-lg-3 point num" id="decimal" value=".">
             .
         </button>
-        <button class="col-sm-3 col-lg-3 point" id='equal' value="=">
-            =
+        <button class="col-xs-3 col-lg-3 point equals" id='equal' value="=">
+            &#61;
         </button>
-        
+
     </div>
 </div>
 </body>
