footer, background image

--- a/index.html
+++ b/index.html
@@ -21,83 +21,98 @@
     <!-- google font-->
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
 
+    <!-- font awesome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <!-- my stylesheet-->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="container">
-    <div class="row">
+<div class="wrapper">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-3 total">
                 <div id="total"></div>
             </div>
-    </div>
-    <div class="row">
-        <button class="col-xs-3 col-lg-3 point clear" id='allClear' value="AC">
-           AC
-        </button>
-        <button class="col-xs-3 col-lg-3 point clear" id="clearLast" value="CE">
-           CE
-        </button>
-        <button class="col-xs-3 col-lg-3 point" id="pecent" value="%">
-            &#37
-        </button>
-        <button class="col-xs-3 col-lg-3 point" id="divide" value='/'>
-           &#247;
-        </button>
-    </div>
-    <div class="row">
-        <button class="col-xs-3 col-lg-3 point num" id="seven" value="7">
-            7
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="eight" value="8">
-            8
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="nine" value="9">
-           9
-        </button>
-        <button class="col-xs-3 col-lg-3 point" id="multiply" value='*'>
-            &times;
-        </button>
-    </div>
-    <div class="row">
-        <button class="col-xs-3 col-lg-3 point num" id="four" value="4">
-           4
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="five" value="5">
-            5
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="six" value="6">
-           6
-        </button>
-        <button class="col-xs-3 col-lg-3 point" id='minus' value="-">
-           &minus;
-        </button>
-    </div>
-    <div class="row">
-        <button class="col-xs-3 col-lg-3 point num" id="one" value="1">
-            1
-        </button>
-        <button class="col-xs-3 col-lg-3 point num"  id='two' value="2">
-            2
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="three" value="3">
-            3
-        </button>
-        <button class="col-xs-3 col-lg-3 point plus" id='plus' value="+">
-            &plus;
-        </button>
-    </div>
-    <div class="row">
-        <button class="col-xs-3 col-lg-3 point num" id="zero" value="0">
-            0
-        </button>
-        <button class="col-xs-3 col-lg-3 point num" id="decimal" value=".">
-            .
-        </button>
-        <button class="col-xs-3 col-lg-3 point equals" id='equal' value="=">
-            &#61;
-        </button>
+        </div>
+        <div class="row">
+            <button class="col-xs-3 col-lg-3 point clear" id='allClear' value="AC">
+                AC
+            </button>
+            <button class="col-xs-3 col-lg-3 point clear" id="clearLast" value="CE">
+                CE
+            </button>
+            <button class="col-xs-3 col-lg-3 point" id="pecent" value="%">
+                &#37
+            </button>
+            <button class="col-xs-3 col-lg-3 point" id="divide" value='/'>
+                &#247;
+            </button>
+        </div>
+        <div class="row">
+            <button class="col-xs-3 col-lg-3 point num" id="seven" value="7">
+                7
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="eight" value="8">
+                8
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="nine" value="9">
+                9
+            </button>
+            <button class="col-xs-3 col-lg-3 point" id="multiply" value='*'>
+                &times;
+            </button>
+        </div>
+        <div class="row">
+            <button class="col-xs-3 col-lg-3 point num" id="four" value="4">
+                4
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="five" value="5">
+                5
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="six" value="6">
+                6
+            </button>
+            <button class="col-xs-3 col-lg-3 point" id='minus' value="-">
+                &minus;
+            </button>
+        </div>
+        <div class="row">
+            <button class="col-xs-3 col-lg-3 point num" id="one" value="1">
+                1
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id='two' value="2">
+                2
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="three" value="3">
+                3
+            </button>
+            <button class="col-xs-3 col-lg-3 point plus" id='plus' value="+">
+                &plus;
+            </button>
+        </div>
+        <div class="row">
+            <button class="col-xs-3 col-lg-3 point num" id="zero" value="0">
+                0
+            </button>
+            <button class="col-xs-3 col-lg-3 point num" id="decimal" value=".">
+                .
+            </button>
+            <button class="col-xs-3 col-lg-3 point equals" id='equal' value="=">
+                &#61;
+            </button>
 
+        </div>
+    </div>
+    <div class="foot row"><p class="col-lg-6 col-lg-offset-1">Made By: <a href="http://www.kaleenaperkins.com"
+                                                                          target="_blank">Kaleena Perkins</a></p>
+
+        <p class="col-lg-5 text-right">Connect with me:
+            <a href="mailto:kaleena.perkins@gmail.com?Subject=studentSays" target="_top"><span
+                    class="fa fa-envelope"></span></a>
+            <a href="https://twitter.com/kaperkin"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/kaleenaperkins"><span class="fa fa-linkedin"></span></a>
+        </p>
     </div>
 </div>
 </body>
