--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </div>
         </div>
         <div class="row">
-            <button class="col-xs-3 col-lg-3 point clear" id='allClear' value="AC">
+            <button class="col-xs-3 col-lg-3 point allClear text-center" id='allClear' value="AC">
                 AC
             </button>
-            <button class="col-xs-3 col-lg-3 point clear" id="clearLast" value="CE">
+            <button class="col-xs-3 col-lg-3 point clear text-center" id="clearLast" value="CE">
                 CE
             </button>
             <button class="col-xs-3 col-lg-3 point" id="pecent" value="%">
