--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 </body>
 <!------------------jQuery CDN------------->
-<script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/app.js">
 </script>
 </html>
